feat: add accessible dismissible announcement banner; persist dismissal; dynamic footer year

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -12,6 +12,10 @@
     />
   </head>
   <body>
+    <div class="announcement-banner" id="announcement-banner" role="region" aria-live="polite" aria-label="Site announcement">
+      <span class="announcement-text">📢 Activity registration is open until the end of the month. Don't lose your spot!</span>
+      <button id="announcement-dismiss" class="announcement-dismiss" aria-label="Dismiss announcement">✕</button>
+    </div>
     <header>
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
@@ -95,7 +99,7 @@
     </main>
 
     <footer>
-      <p>&copy; 2023 Mergington High School</p>
+      <p>&copy; <span id="footer-year">2023</span> Mergington High School</p>
     </footer>
 
     <!-- Registration Modal -->
